# wasmtime-functions

./: Cargo.toml  README.md
crates/codegen/: Cargo.toml
crates/codegen/src/: import.rs  lib.rs
crates/functions/: Cargo.toml
crates/functions/src/: imports.rs  lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: host.rs  lib.rs  log.rs  server.rs
crates/runtime/witx/: cookie.witx  error.witx  functions.witx  request.witx  response.witx
crates/wasmtime-functions/: Cargo.toml
crates/wasmtime-functions/src/: lib.rs
examples/: README.md
examples/hello/: Cargo.toml  README.md
examples/hello/src/: lib.rs  main.rs
host/: Cargo.toml
host/src/: main.rs
