[package]
name = "wasmtime-functions-host"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"
default-run = "wasmtime-functions-host"

[dependencies]
wasmtime-functions-runtime = { path = "../crates/runtime" }
structopt = { version = "0.3.22", features = ["color", "suggestions"] }
anyhow = "1.0.42"
futures = "0.3.15"
async-std = { version = "1.9.0", features = ["attributes"] }
async-ctrlc = "1.2.0"
log = "0.4.14"
env_logger = "0.8.4"
rpassword = "5.0.1"
