[package]
name = "wasmtime-functions-codegen"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "1.0.76", features = ["full"] }
quote = "1.0.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
proc-macro2 = "1.0.29"
heck = "0.3.3"
