[package]
name = "wasmtime-functions"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"

[dependencies]
witx-bindgen-rust = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "a623bd833c46661340d056cec8a0929325dfa2f2" }
wasmtime-functions-codegen = { path = "../codegen" }
http = "0.2.4"
time = "0.2.27"
