[package]
name = "wasmtime-functions"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"

[dependencies]
witx-bindgen-rust = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "aa00fa06ec7c90073e098a9a652ea8daa51ab1dc" }
wasmtime-functions-codegen = { path = "../codegen" }
http = "0.2.5"
time = "0.3.2"
