[package]
name = "wasmtime-functions-runtime"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"

[dependencies]
wasmtime-functions-metadata = { path = "../metadata" }
wiggle = "0.26.0"
wasmtime-wiggle = "0.26.0"
tide = { version = "0.16.0", default_features = false, features = ["h1-server", "cookies", "sessions"] }
http-types = "2.10.0"
time = "0.2.26"
anyhow = "1.0.40"
bytes = "1.0.1"
async-std = "1.9.0"
async-h1 = "2.3.2"
async-trait = "0.1.48"
log = "0.4.14"
wasmtime = "0.26.0"
wasmtime-wasi = "0.26.0"
futures-timer = "3.0.2"
futures = "0.3.13"
