[package]
name = "wasmtime-functions-runtime"
version = "0.1.0"
authors = ["Peter Huene <peter@huene.dev>"]
edition = "2018"

[dependencies]
witx-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "aa00fa06ec7c90073e098a9a652ea8daa51ab1dc", features = ["async"] }
wasmtime-functions-metadata = { path = "../metadata" }
tide = { version = "0.16.0", default_features = false, features = ["h1-server", "cookies", "sessions"] }
http-types = "2.12.0"
time = "0.2.27"
anyhow = "1.0.44"
bytes = "1.1.0"
async-std = "1.10.0"
async-h1 = "2.3.2"
async-trait = "0.1.51"
log = "0.4.14"
wasmtime = "0.30.0"
wasmtime-wasi = "0.30.0"
futures-timer = "3.0.2"
futures = "0.3.17"
